# Omnix

./: .gitignore  CMakeLists.txt  compile_commands.json
Thunder2D/: CMakeLists.txt
Thunder2D/include/: batch.h  t2dshader.h  thunder2d.h
Thunder2D/src/: thunder2d.cpp
brain/: CMakeLists.txt
brain/include/: brain.h
include/: BoltID.h  Omnix.h  OmnixData.h  OmnixEvents.h  OmnixModuleID.h  OmnixModules.h  OmnixUtil.h  OmnixWindowBackend.h  boltf.h  boltlog.h  texture.h
max/: CMakeLists.txt  tests.cpp
max/include/: max.h
max/src/: max.cpp
resources/shaders/: debug.frag  debug.vert  sprite.frag  sprite.vert  ui.frag  ui.vert
src/: Omnix.cpp  OmnixModule.cpp  boltlog.cpp
test/: tests.cpp
